--- a/mywarehouse/warehouseapp/templates/issue_product.html
+++ b/mywarehouse/warehouseapp/templates/issue_product.html
@@ -15,6 +15,7 @@
         {% csrf_token %}
         {{ form.as_p }}
         <button type="submit">Issue product</button>
+        <a href="{% url 'index' %}">Back</a>
     </form>
 </body>
 </html>
