--- a/mywarehouse/warehouseapp/templates/index.html
+++ b/mywarehouse/warehouseapp/templates/index.html
@@ -1,10 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Warehouse Management</title>
 </head>
 <body>
-$END$
+
+    <h1>Welcome to the Warehouse Management System</h1>
+    <ul>
+        <li><a href="{% url 'receive_product' %}">Receive Product</a></li>
+        <li><a href="{% url 'issue_product' %}">Issue Product</a></li>
+        <li><a href="{% url 'display_product_list' %}">Display Product List</a></li>
+        <li><a href="{% url 'logout' %}">Logout</a></li>
+    </ul>
+
 </body>
 </html>
