--- a/mywarehouse/warehouseapp/templates/index.html
+++ b/mywarehouse/warehouseapp/templates/index.html
@@ -12,6 +12,7 @@
         <li><a href="{% url 'receive_product' %}">Receive Product</a></li>
         <li><a href="{% url 'issue_product' %}">Issue Product</a></li>
         <li><a href="{% url 'display_product_list' %}">Display Product List</a></li>
+        <li><a href="{% url 'manage_companies' %}">Manage Companies</a></li>
         <li><a href="{% url 'logout' %}">Logout</a></li>
     </ul>
 
