added model to user interface

--- a/mywarehouse/warehouseapp/templates/product_detail.html
+++ b/mywarehouse/warehouseapp/templates/product_detail.html
@@ -1,10 +1,30 @@
+<!-- product_detail.html -->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>{{ product.name }} Details</title>
 </head>
 <body>
-
+    <h1>{{ product.name }} Details</h1>
+    <ul>
+        <li><strong>Name:</strong> {{ product.name }}</li>
+        <li><strong>Price:</strong> {{ product.price }}</li>
+        <li><strong>Quantity:</strong> {{ product.quantity }}</li>
+        <li><strong>Company:</strong> {% if product.company %}{{ product.company.name }}{% else %}N/A{% endif %}</li>
+        <li><strong>Regions:</strong>
+            {% if product.region.all %}
+                {% for region in product.region.all %}
+                    {{ region.region }}{% if not forloop.last %}, {% endif %}
+                {% endfor %}
+            {% else %}
+                N/A
+            {% endif %}
+        </li>
+    </ul>
+    <a href="{% url 'display_product_list' %}">Back to Product List</a>
 </body>
 </html>
