--- a/mywarehouse/warehouseapp/templates/product_detail.html
+++ b/mywarehouse/warehouseapp/templates/product_detail.html
@@ -1,18 +1,11 @@
-<!-- product_detail.html -->
-
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+{% extends 'base.html' %}
+{% block title %} {{ product.name }} Details {% endblock %}
+{% block content %}
     <title>{{ product.name }} Details</title>
-</head>
-<body>
     <h1>{{ product.name }} Details</h1>
     <ul>
         <li><strong>Name:</strong> {{ product.name }}</li>
-        <li><strong>Price:</strong> {{ product.price }}</li>
+        <li><strong>Price:</strong> {{ product.price }}$</li>
         <li><strong>Quantity:</strong> {{ product.quantity }}</li>
         <li><strong>Company:</strong> {% if product.company %}{{ product.company.name }}{% else %}N/A{% endif %}</li>
         <li><strong>Regions:</strong>
@@ -25,6 +18,5 @@
             {% endif %}
         </li>
     </ul>
-    <a href="{% url 'display_product_list' %}">Back to Product List</a>
-</body>
-</html>
+    <a href="{% url 'display_product_list' %}"  title="Back"><i class="fa-solid fa-2x fa-rotate-left"></i></a>
+{% endblock %}
