--- a/mywarehouse/warehouseapp/templates/base.html
+++ b/mywarehouse/warehouseapp/templates/base.html
@@ -1,22 +1,22 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
+<body class="background">
 <head>
     <meta charset="UTF-8">
-    <title>Warehouse Login</title>
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+          integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+          crossorigin="anonymous">
+    <script src="https://kit.fontawesome.com/6ecd68d765.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="{% static 'my_css.css' %}">
+    <title>
+        {% block title %} {% endblock %}</title>
 </head>
-<body>
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{% block title %}My Warehouse App{% endblock %}</title>
-</head>
-<body>
     <div>
         {% block content %}{% endblock %}
     </div>
-</body>
-</html>
 </body>
 </html>
