--- a/mywarehouse/warehouseapp/templates/login.html
+++ b/mywarehouse/warehouseapp/templates/login.html
@@ -1,9 +1,16 @@
 {% extends 'base.html' %}
+{% block title %} Login {% endblock %}
 {% block content %}
-  <h2>Login</h2>
+<div class="jumbotron jumbotron-fluid">
+  <div class="container">
+    <h1 class="display-4" style="text-align: center;">Login</h1>
+    <p class="lead">Please enter your login and password.</p>
   <form method="post" action="{% url 'login' %}">
     {% csrf_token %}
     {{ form.as_p }}
     <button type="submit">Login</button>
   </form>
+  </div>
+</div>
+
 {% endblock %}
