--- a/mywarehouse/warehouseapp/templates/manage_companies.html
+++ b/mywarehouse/warehouseapp/templates/manage_companies.html
@@ -1,10 +1,7 @@
-<html>
-
-<head>
-    <title>Manage Companies</title>
-</head>
-
-<body>
+{% extends 'base.html' %}
+{% load bootstrap %}
+{% block title %} Manage Companies {% endblock %}
+{% block content %}
     {% if companies %}
         <h2>Existing Companies:</h2>
         <ul>
@@ -18,11 +15,9 @@
     {{ delete_form.errors }}
     <form method="post" action="{% url 'manage_companies' %}">
         {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit" name="action" value="create_company">Create Company</button>
-        <button type="submit" name="action" value="delete_company">Delete Company</button>
-        <a href="{% url 'index' %}">Back</a>
+        {{ form|bootstrap }}
+        <button type="submit" name="action" value="create_company" class="btn btn-dark">Create Company</button>
+        <button type="submit" name="action" value="delete_company" class="btn btn-danger">Delete Company</button>
+        <a href="{% url 'index' %}" title="Back" ><i class="fa-solid fa-2x fa-rotate-left"></i></a>
     </form>
-</body>
-
-</html>
+{% endblock %}
